k8/deployment-healthcheck.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloserver-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      containers:
      - name: hello-container
        image: eriksonmurrugarra/hello-server:2
        ports:
        - name: nodejs-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
