k8/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodehelloserverapp.eriksonmurrugarra.com
  labels:
    app: helloserver
spec:
  containers:
  - name: helloserver-container
    image: eriksonmurrugarra/hello-server
    ports:
    - name: nodejs-port
      containerPort: 3000
