k8/nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloserver-service
spec:
  ports:
  - port: 31001
    nodePort: 30002
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: hello-server
  type: NodePort
