k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-2
spec:
  ports:
  - port: 80
    nodePort: 32081
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: hello-2
  type: NodePort
