k8/test.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-deployment-1
  namespace: verizon
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-1
    spec:
      containers:
      - name: hello-container
        image: eriksonmurrugarra/hello-server:2
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-1
  namespace: verizon
spec:
  ports:
  - port: 80
    nodePort: 32085
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: hello-1
  type: NodePort
