k8/ingress-rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-rules
spec:
  rules:
  -
